Fix align banner bar

--- a/assets/css/_banner.scss
+++ b/assets/css/_banner.scss
@@ -12,6 +12,7 @@
         width: 100%;
         display: flex;
         justify-content: space-between;
+        align-items: center;
         @media (max-width: 900px) {
             width: 100%;
             flex-direction: column;
