--- a/assets/sass/css/main.css
+++ b/assets/sass/css/main.css
@@ -134,7 +134,8 @@ body {
   #banner .banner-div {
     width: 100%;
     display: flex;
-    justify-content: space-between; }
+    justify-content: space-between;
+    align-items: center; }
     @media (max-width: 900px) {
       #banner .banner-div {
         width: 100%;
